--- a/Desktop/portfolio-examen-front/Styles/aPropos.css
+++ b/Desktop/portfolio-examen-front/Styles/aPropos.css
@@ -142,6 +142,10 @@
     width: 100%; /* Utilise toute la largeur */
   }
 
+  .about__description {
+    margin-right: 8%;
+  }
+
   .about__content {
     flex-direction: column;
     align-items: center;
@@ -158,9 +162,7 @@
   }
 
   .quality-cards {
-    flex-wrap: wrap;
-    justify-content: auto;
-    padding-left: 10vw;
+    justify-content: center;
     margin-bottom: 5vh;
   }
 
@@ -182,23 +184,12 @@
   }
 }
 
-/* Styles pour les écrans plus larges */
-@media (min-width: 1024px) {
-  .about__content {
-    flex-direction: row;
-    justify-content: space-between;
-  }
 
-  .about__image {
-    width: 30vw;
-  }
 
-  .about__text-container {
-    width: 45vw;
-  }
-
-  .quality-cards {
-    margin-left: 5vw;
+@media (max-width: 480px) {
+  .quality-card {
+    width: 100%; /* Prendre toute la largeur sur les très petits écrans */
+    max-width: 200px;
   }
 }
 
